--- a/client/index.html
+++ b/client/index.html
@@ -13,9 +13,13 @@
     <script src="scripts/app.js"></script>
   </head>
   <body>
+    <div class="userinput">
+      <input class="name" placeholder="name" />
+      <input class="message" placeholder="message" />
+      <button class="submit">Submit</button>
+    </div>
     <div id="main">
       <h1>chatterbox</h1>
-      <!-- Your HTML goes here! -->
     </div>
   </body>
 </html>
